force-app/main/default/objects/Previous_Employment__c/Previous_Employment__c.object-meta.xml
<CustomObject>
    <label>Previous Employment</label>
    <nameField>
        <displayFormat>PREVEMP-{0000}</displayFormat>
        <label>Previous Employment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>