force-app/main/default/objects/Previous_Employment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>120</length>
    <type>Text</type>
</CustomField>