force-app/main/default/objects/Previous_Employment__c/fields/Employment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Employment_Duration__c</fullName>
    <formula>FLOOR(
(To_Date__c-From_Date__c)/365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>