force-app/main/default/objects/Previous_Employment__c/fields/Experience_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Experience_Certificate__c</fullName>
    <label>Experience Certificate</label>
    <type>Url</type>
</CustomField>