force-app/main/default/objects/Previous_Employment__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Previous Employments</relationshipLabel>
    <relationshipName>Previous_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>