force-app/main/default/objects/Previous_Employment__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOD</label>
    <referenceTo>HOD__c</referenceTo>
    <relationshipLabel>Previous Employments</relationshipLabel>
    <relationshipName>Previous_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>