force-app/main/default/objects/Previous_Employment__c/validationRules/Experience_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Experience__c&lt;=0</errorConditionFormula>
    <errorMessage>Experience must be greater than 0.</errorMessage>
</ValidationRule>