force-app/main/default/objects/Previous_Employment__c/validationRules/From_Date_should_be_before_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_should_be_before_To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>From_Date__c &gt; To_Date__c</errorConditionFormula>
    <errorMessage>From Date must be before or equal to the To Date.</errorMessage>
</ValidationRule>