force-app/main/default/objects/Previous_Employment__c/validationRules/Organization_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Organization_Name__c)</errorConditionFormula>
    <errorMessage>Organization Name is required.</errorMessage>
</ValidationRule>