force-app/main/default/objects/Previous_Employment__c/validationRules/Position_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Position_Held__c)</errorConditionFormula>
    <errorMessage>Position Held is required.</errorMessage>
</ValidationRule>